--- a/food.html
+++ b/food.html
@@ -7,7 +7,7 @@
         <h1>food club </h1>
         <p>it includes traditional food only
             <h2>drinks</h2>
-            <p>it includes traditional drinks only</p></p>
+            <p>it includes traditional and local drinks only</p></p>
             <div>
                 <h2>starter</h2>
                 <p>main dish</p>
