--- a/food.html
+++ b/food.html
@@ -9,7 +9,7 @@
             <h2>drinks</h2>
             <p>it includes traditional and local drinks only</p></p>
             <div>
-                <h2>starter</h2>
+                <h2> it has starter</h2>
                 <p>main dish</p>
             </div>
     </body>
